tests/ui/threads.stderr
error[E0623]: lifetime mismatch
 --> $DIR/threads.rs:9:35
  |
6 | fn mixup(s: Option<Sender<Idx16<'_>>>, r: Option<Receiver<Idx16<'_>>>) {
  |                           ---------                       --------- these two types are declared with different lifetimes...
...
9 |         (Some(s), None) => s.send(arena.add(1usize)).unwrap(),
  |                                   ^^^^^^^^^^^^^^^^^ ...but data from `r` flows into `s` here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0623`.
